--- a/animate-epub/styles/text.css
+++ b/animate-epub/styles/text.css
@@ -19,6 +19,12 @@ h1 {
 	margin-top: .5rem; 
 	margin-bottom: 1.5rem;
 	text-align: center; }
+
+h2 {
+	font-family: sans-serif;
+	color: #282828;
+	font-size: 1.75em;
+	margin-top: 4rem; }		
 	
 h4 {
 	text-transform: uppercase;
@@ -35,6 +41,15 @@ h4 {
 	margin-bottom: 0rem; 
 	margin-left: 5%; 
 	margin-right: 5%; }
+	
+.story p, li {	
+	text-align: left;
+	margin-top: 0;
+	margin-bottom: 1em; 
+	text-indent: none; }
+
+.story ol {
+	padding-left: 20px; }		
 
 img {
 	max-width: 100%; }	
@@ -45,4 +60,22 @@ hr {
 	margin-top: 2em; 
 	margin-bottom: 2em; }	
 	
+pre {
+	text-align: left;
+	width: 88%;
+	margin-left: 4%; 
+	margin-right: 4%; 
+	padding:2%;
+	max-height: 300px;
+	background: #eee;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	word-wrap: normal;
+	white-space: pre-wrap;
+	overflow: auto;
+}	
+
+code {
+	background: #eee;
+	padding: 1px;  }	
 	
